# ICCRAW

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.es.md  CHANGELOG.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.md  Cargo.toml  README.es.md  README.md  ROADMAP.md  SECURITY.es.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  colorimetric_validation.yml  config.yml  feature_request.yml
.github/workflows/: build-rawpy-demosaic-wheel.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: smoke.rs
core/chart_detection/: Cargo.toml
core/chart_detection/src/: lib.rs
core/color/: Cargo.toml
core/color/src/: lib.rs
core/export/: Cargo.toml
core/export/src/: lib.rs
core/pipeline/: Cargo.toml
core/pipeline/src/: lib.rs
core/profiling/: Cargo.toml
core/profiling/src/: lib.rs
core/raw/: Cargo.toml
core/raw/src/: lib.rs
core/reporting/: Cargo.toml
core/reporting/src/: lib.rs
core/sampling/: Cargo.toml
core/sampling/src/: lib.rs
docs/: AMAZE_GPL3.es.md  AMAZE_GPL3.md  ARCHITECTURE.es.md  ARCHITECTURE.md  C2PA_CAI.es.md  C2PA_CAI.md  COLOR_PIPELINE.es.md  COLOR_PIPELINE.md  COMPARISON.es.md  COMPARISON.md  DEBIAN_PACKAGE.es.md  DEBIAN_PACKAGE.md  DECISIONS.es.md  DECISIONS.md  GESTION_COLOR_LINUX_PROBRAW.es.md  GESTION_COLOR_LINUX_PROBRAW.md  INTEGRACION_DCRAW_ARGYLL.md  INTEGRACION_LIBRAW_ARGYLL.es.md  INTEGRACION_LIBRAW_ARGYLL.md  ISSUES.md  LEGAL_COMPLIANCE.es.md  LEGAL_COMPLIANCE.md  MACOS_INSTALL.es.md  MACOS_INSTALL.md  MANUAL_USUARIO.es.md  MANUAL_USUARIO.md  METODOLOGIA_COLOR_RAW.es.md  METODOLOGIA_COLOR_RAW.md  NEXORAW_PROOF.md  OPERATIVE_REVIEW_PLAN.es.md  OPERATIVE_REVIEW_PLAN.md  PERFORMANCE.es.md  PERFORMANCE.md  PROBRAW_PROOF.es.md  PROBRAW_PROOF.md  RELEASE_INSTALLERS.es.md  RELEASE_INSTALLERS.md  REPRODUCIBILITY.es.md  REPRODUCIBILITY.md  ROADMAP.es.md  (+6 more)
docs/_migration/: github_issues_to_create.es.md  github_issues_to_create.md  github_topics.es.md  github_topics.md  pr_body_block1.es.md  pr_body_block1.md
docs/releases/: 0.2.2.es.md  0.2.2.md  0.2.3.es.md  0.2.3.md  0.2.5.es.md  0.2.5.md  0.2.6.es.md  0.2.6.md  0.3.0.es.md  0.3.0.md  0.3.1.es.md  0.3.1.md  0.3.10.es.md  0.3.10.md  0.3.11.es.md  0.3.11.md  0.3.12.es.md  0.3.12.md  0.3.13.es.md  0.3.13.md  0.3.14.es.md  0.3.14.md  0.3.15.es.md  0.3.15.md  0.3.16.es.md  0.3.16.md  0.3.17.es.md  0.3.17.md  0.3.18.es.md  0.3.18.md  0.3.19.es.md  0.3.19.md  0.3.2.es.md  0.3.2.md  0.3.3.es.md  0.3.3.md  0.3.4.es.md  0.3.4.md  0.3.5.es.md  0.3.5.md  (+8 more)
examples/: profile_session.sh  recipe_scientific.yml
examples/demo_session/: README.es.md  README.md  prepare_demo.sh  recipe.yml  run_demo.sh
examples/demo_session/data/: MANIFEST.sha256
locales/: en.ts
packaging/arch/: PKGBUILD  README.es.md  README.md  build_pkg.sh  probraw.install
packaging/debian/: build_deb.sh  validate_deb.sh
packaging/macos/: build_app.sh  launcher_cli.py  launcher_gui.py  probraw.spec
packaging/windows/: build_installer.ps1  iccraw.iss  iccraw.spec  launcher_cli.py  launcher_gui.py  nexoraw.iss  nexoraw.spec  probraw.iss  probraw.spec
scripts/: _apply_i18n.py  _fill_translations.py  benchmark_gui_interaction.py  benchmark_pipeline.py  benchmark_raw_pipeline.py  build_rawpy_demosaic_wheel.py  build_translations.sh  check_amaze_support.py  check_performance_regression.py  check_tools.ps1  check_tools.sh  create_github_issues.sh  install_amaze_backend.ps1  install_amaze_backend.py  profile_pipeline.py  regenerate_golden_hashes.py  run_checks.ps1  run_checks.sh  run_ui.sh  run_ui_qt.sh  sync_wiki.ps1  validate_cachyos_install.sh  validate_linux_install.sh
src/icc_entrada/: __init__.py  chart_detection.py  cli.py  export.py  gui.py  models.py  pipeline.py  preview.py  profiling.py  raw.py  recipe.py  reporting.py  sampling.py  utils.py  workflow.py
src/iccraw/: __init__.py  cli.py  display_color.py  gui.py  gui.py.bak  i18n.py  metadata_viewer.py  qa_compare.py  reporting.py  session.py  sidecar.py  update.py  workflow.py
src/iccraw/chart/: __init__.py  detection.py  sampling.py
src/iccraw/core/: __init__.py  external.py  models.py  recipe.py  utils.py
src/iccraw/profile/: __init__.py  builder.py  export.py  generic.py
src/iccraw/provenance/: c2pa.py  nexoraw_proof.py
src/iccraw/raw/: __init__.py  compat.py  metadata.py  pipeline.py  preview.py
src/iccraw/resources/: __init__.py
src/nexoraw/: __init__.py  __main__.py  cli.py  display_color.py  gui.py  gui_config.py  i18n.py  metadata_viewer.py  session.py  workflow.py
src/nexoraw/chart/: sampling.py
src/nexoraw/core/: external.py  recipe.py
src/nexoraw/profile/: builder.py  export.py  gamut.py  generic.py
src/probraw/: __init__.py  cli.py  display_color.py  gui.py  gui_config.py  i18n.py  metadata_viewer.py  reporting.py  sidecar.py  update.py  workflow.py
testdata/batch_images/: session_001.tiff
testdata/charts/: mock_chart.tiff
testdata/raw/: mock_capture.nef
testdata/recipes/: scientific_recipe.yml
testdata/references/: colorchecker24_colorchecker2005_d50.json  colorchecker24_reference.json
testdata/regression/: MANIFEST.json
tests/: README.md  test_amaze_install.py  test_batch_develop_parallel.py  test_c2pa_provenance.py  test_cli_help.py  test_detection_sampling.py  test_development_profile.py  test_display_color.py  test_docs_encoding.py  test_export.py  test_external.py  test_generic_profiles.py  test_gui_session_paths.py  test_i18n.py  test_metadata_viewer.py  test_mtf_analysis.py  test_nexoraw_proof.py  test_pipeline_dcraw.py  test_pipeline_libraw.py  test_preview.py  test_probraw_proof.py  test_profiling.py  test_qa_compare.py  test_raw_metadata.py  test_rawpy_compat.py  test_recipe.py  test_reporting.py  test_session.py  test_sidecar.py  test_update.py  test_utils.py  test_workflow.py
tests/regression/: __init__.py  test_canonical_hashes.py
tests_py/: test_cli_help.py  test_pipeline_dcraw.py  test_preview.py  test_profiling.py  test_recipe.py  test_session.py  test_workflow.py
(+85 files in other folders)
