[workspace]
members = [
  "core/raw",
  "core/pipeline",
  "core/chart_detection",
  "core/sampling",
  "core/profiling",
  "core/color",
  "core/export",
  "core/reporting",
  "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Comunidad de la Asociacion Espanola de Imagen Cientifica y Forense"]

[workspace.dependencies]
anyhow = "=1.0.81"
camino = { version = "=1.1.6", features = ["serde1"] }
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
serde_yaml = "=0.9.25"
sha2 = "=0.10.8"
thiserror = "=1.0.57"
time = { version = "=0.3.30", features = ["formatting", "serde"] }
indexmap = "=2.2.6"
