[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iccraw"
version = "0.1.0"
description = "Pipeline reproducible para RAW, deteccion de carta y perfilado ICC de camara"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "ICCRAW Contributors"}
]
dependencies = [
  "numpy>=2.0",
  "PyYAML>=6.0",
  "rawpy>=0.26",
  "opencv-python-headless>=4.10",
  "tifffile>=2025.1",
  "Pillow>=10.0",
  "colour-science>=0.4.7",
  "scipy>=1.13",
]

[project.scripts]
app = "icc_entrada.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
addopts = "-q"
