[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iccraw"
dynamic = ["version"]
description = "Pipeline reproducible para RAW, deteccion de carta y perfilado ICC de camara"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
  {name = "Comunidad de la Asociacion Espanola de Imagen Cientifica y Forense"}
]
dependencies = [
  "numpy>=2.0",
  "PyYAML>=6.0",
  "opencv-python-headless>=4.10",
  "tifffile>=2025.1",
  "Pillow>=10.0",
  "colour-science>=0.4.7",
  "scipy>=1.13",
  "rawpy>=0.26",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.8",
]
dev = [
  "pytest>=8.0",
]
installer = [
  "pyinstaller>=6.10",
]

[project.scripts]
iccraw = "iccraw.cli:main"
iccraw-ui = "iccraw.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "iccraw.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"iccraw.resources" = ["references/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
