[package]
name = "icc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
icc-raw = { path = "../core/raw" }
icc-pipeline = { path = "../core/pipeline" }
icc-chart-detection = { path = "../core/chart_detection" }
icc-sampling = { path = "../core/sampling" }
icc-profiling = { path = "../core/profiling" }
icc-export = { path = "../core/export" }
icc-reporting = { path = "../core/reporting" }

[dev-dependencies]
assert_cmd = "=2.0.12"
predicates = "3.1"
tempfile = "=3.10.1"
