[package]
name = "icc-export"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
icc-pipeline = { path = "../pipeline" }

[dev-dependencies]
tempfile = "=3.10.1"
