[package]
name = "icc-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
icc-raw = { path = "../raw" }
thiserror.workspace = true

[dev-dependencies]
tempfile = "=3.10.1"
