[package]
name = "icc-raw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
sha2.workspace = true
time.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "=3.10.1"
