[package]
name = "icc-sampling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
icc-chart-detection = { path = "../chart_detection" }

[dev-dependencies]
tempfile = "=3.10.1"
